# tboi_reddit_bot

./: Cargo.toml  holy.json  items.json  items2.json  items3.json  logs.txt  schema.sql  sqlx-data.json
src/: collectible.rs  collectible2.rs  credentials.rs  db_service.rs  lib.rs  logfile.rs  main_service.rs  reddit_service.rs  reddit_service_builder.rs  repo.rs  utils.rs
