[package]
name = "tboibot"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[dependencies]
shuttle-secrets = "0.8.0"
shuttle-service = { version = "0.8.0" }
shuttle-shared-db = { version = "0.8.0", features = ["postgres"] }
sqlx = { version = "0.6.2", features = ["postgres"] }
roux = "1.3.7"
roux-stream = "0.1.0"
tracing = "0.1.37"
anyhow = "1.0.68"
tokio-retry = "0.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
futures = "0.3.25"
